---
source: parser/tests/cfg_snapshots.rs
expression: "parse_cfg_from_statements(\"\n      while true {\n        let a = 1\n      }\n      \")"
---
digraph {
    0 [ label = "Entry" ]
    1 [ label = "Exit" ]
    2 [ label = "BasicBlock(0)" ]
    3 [ label = "BasicBlock(1)" ]
    0 -> 2 [ label = "Normal" ]
    2 -> 3 [ label = "ConditionTrue(1)" ]
    3 -> 2 [ label = "Normal" ]
    2 -> 1 [ label = "ConditionFalse(1)" ]
}

